sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/EmptyCaseBody.sand
pub class EmptyCaseBody {
    foo() {
        let a = switch val {
            case c {

            }

            else {
                d
            }
        };
    }
}